eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msc-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: msc-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: msc-service
    spec:
      serviceAccountName: backend-service-account
      containers:
      - name: msc-service
        image: 110975517810.dkr.ecr.eu-central-1.amazonaws.com/msc-service-img:latest
        ports:
        - containerPort: 8080
