eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "msc-service-ingress"
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: msc-service
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "msc-eks-service"
            port:
              number: 80
